# L2

./: AEROFLOTWithCheck.cpp  AEROFLOTWithCheck.h  AeroFlot.cpp  AeroFlot.h  CMakeLists.txt  main.cpp
l2-2/: FileHandler.cpp  FileHandler.h  SentenceReverser.cpp  SentenceReverser.h  main.cpp
